welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: 'while' expected but 'if' found.
	if (getCouleurSol=Color.green)
        ^SlugTracking:8: error: '(' expected but ';' found.
	{
^SlugTracking:19: error: illegal start of simple expression
}
^